产品详情页手机端

--- a/app/frontend/view/desktop/product/detail.html
+++ b/app/frontend/view/desktop/product/detail.html
@@ -42,7 +42,7 @@
 <div class="product-container">
     <div class="product-nav">
         <div class="common-width">
-            <h3>Mi Sphere Camera Kit</h3>
+            <h3>Rechargeable Battery Operated Fan With 3 Speeds</h3>
             <div class="sub_nav">
                 <span class="active">Overview</span>
                 <span>Specs</span>
@@ -300,6 +300,7 @@
         var document_sT = $(document).scrollTop(),
             hd = $('.g-hd .hd').height(),
             nav = $('.g-hd .nav').height();
+        console.log(hd);
         var gHd = hd + nav;
         if (document_sT > gHd) {
             $('.product-nav').addClass('nav-active');
