--- a/app/frontend/view/mobile/product/detail.html
+++ b/app/frontend/view/mobile/product/detail.html
@@ -152,7 +152,7 @@
 <div class="product-container">
 
     <div class="product-gallery">
-        <h3>Mi Sphere Camera Kit</h3>
+        <h3>Rechargeable Battery Operated Fan With 3 Speeds</h3>
         <div class="swiper-container">
             <div class="swiper-wrapper">
                 <div class="swiper-slide">
@@ -186,139 +186,121 @@
         </div>
     </div>
 
-    <div class="product-Overview">
-        <div id="detail_page_box">
+    <div class="product-Detail" id="product-Detail">
+        <div class="detail-page">
             <!-- one -->
-            <section>
-                <div class="detail_box_one relative">
-                    <div class="detail_box_text text_center absolute">
-                        <strong style="opacity: 1; margin-top: 0px;">AC2100  MU-MIMO Dual-band Smart Wi-Fi Router with Touchlink</strong>
-                        <p style="opacity: 1; margin-top: 0px;">
-                            Superfast AC Speeds for your Life Without Interruptions
-                        </p>
-                    </div>
-                    <div class="detail_box_img">
-                        <img class="" src="https://cloud.wavlink.com/index.php?user/publicLink&amp;fid=1dcatoocVeytoV_Kcm208V1W_TByAhY7cn8wkj04y11hdOeDcHBu3b8BfXlwChE2n_HBsBobnobvwwexroIfE4XJnbOsZ4dk70xAfQe5At0WCahZ7a-7QW_QKeSolQhQ93vqx4B-8LFirLiR35nInXzd8tlemdyZxhE&amp;file_name=/1.jpg" alt="">
-                    </div>
+            <div class="page-one page-box">
+                <div class="des-box">
+                    <h3>Rechargeable Battery Operated Fan With 3 Speeds</h3>
+                    <p>
+                        A life saver on hot days
+                    </p>
                 </div>
-            </section>
+                <div class="img-box">
+                    <img src="//minthouz.oss-cn-shenzhen.aliyuncs.com/images/product/English/Fan1/PC/1.jpg" alt="">
+                </div>
+            </div>
             <!-- two -->
-            <section>
-                <div class="detail_box_two relative">
-                    <div class="detail_box_text text_center absolute">
-                        <strong style="opacity: 1; margin-top: 0px;">Experience Incredible Wireless Speeds</strong>
-                        <p style="opacity: 1; margin-top: 0px;">
-                            WN531A6 gives you dominating AC Wi-Fi speeds up to
-                            2100Mbps that keeps a strong, steady signal flowing throughout your
-                            home so that you can enjoy exceptionally smooth,
-                            responsive gameplay and uninterrupted streaming.
-                        </p>
-                    </div>
-                    <div class="detail_box_img">
-                        <img class="" src="https://cloud.wavlink.com/index.php?user/publicLink&amp;fid=6580l0Z00iBhPlB-1jcizB9la1znq4ehzLqYc2oqpNFpTWUy6-quQy6A3UgD8d8sV7sEGSwD4Dv5lSdTyvlLBa8xu__DY18kchX0sj0RruKtJ2ZQ1pz7JW7z8VFm-4UCA9YxcvrKp-sw6JU98EXXoIn01ddDX7uDkjY&amp;file_name=/2.jpg" alt="">
-                    </div>
+            <div class="page-two page-box">
+                <div class="des-box">
+                    <h3>3 Speeds Cool You Down Fast</h3>
+                    <p>
+                        The ingenious fan features three speeds: low, medium, and high, fit-ting anyone's cooling needs.
+                        Just press the button to switch the fan on and adjust wind modes.
+                    </p>
                 </div>
-            </section>
+                <div class="img-box">
+                    <img src="//minthouz.oss-cn-shenzhen.aliyuncs.com/images/product/English/Fan1/PC/2.jpg" alt="">
+                </div>
+            </div>
             <!-- three -->
-            <section>
-                <div class="detail_box_three relative">
-                    <div class="detail_box_text text_center absolute">
-                        <strong style="opacity: 1; margin-top: 0px;">Stronger Signal Everywhere</strong>
-                        <p style="opacity: 1; margin-top: 0px;">
-                            Unlike single-band router, it is composed of two radio frequencies – 2.4GHz and 5GHZ, dual-band technology avoids signal congestion in traffic and provides the ability to switch between two bands so that you can experience good signal anywhere at home.
-                        </p>
-                    </div>
-                    <div class="detail_box_img">
-                        <img class="" src="https://cloud.wavlink.com/index.php?user/publicLink&amp;fid=635crG_WS7q2pEBmqP1eEJs61yR7WUhEfx1TOOowxerz449iH3c3niNaiV_nCHquYRTvDKU7qIdACMqr6AEyyLtMqzYEc8q09Y9chIpCvei9UrCQNLuu1KBuuJLcewcL3oWRsoAsesdPB9LDu93NJ0qc00QlfDKRZb4&amp;file_name=/3.jpg" alt="">
-                    </div>
+            <div class="page-three page-box">
+                <div class="des-box">
+                    <h3>A Portable But Furthermore, A Desktop Fan</h3>
+                    <p>
+                        It can be a handheld fan or as a desktop air fan according to your individual needs.
+                        With a plus stand you can use it as a desktop fan as well.
+                    </p>
                 </div>
-            </section>
+                <div class="img-box">
+                    <img src="//minthouz.oss-cn-shenzhen.aliyuncs.com/images/product/English/Fan1/PC/3.jpg" alt="">
+                </div>
+            </div>
             <!-- four -->
-            <section>
-                <div class="detail_box_four relative">
-                    <div class="detail_box_text text_center absolute">
-                        <strong style="opacity: 1; margin-top: 0px;">High-Gain Omni-directional Patent Antennas for Maximized Range</strong>
-                        <p style="opacity: 1; margin-top: 0px;">
-                            Equipped with six omnidirectional smart antennas,
-                            this router can expand Wi-Fi signal to everywhere in your home,
-                            which optimizes the wireless network coverage to its best ability.
-                        </p>
-                    </div>
-                    <div class="detail_box_img">
-                        <img class="" src="https://cloud.wavlink.com/index.php?user/publicLink&amp;fid=6aee7gi6TPft6dt05CGTp9-NN_f8wNUnLHmeqCqCv6zPB0RQ26sr5r6BPCcigdYhlDCvaHwPQAgx8tVeAUmgobSGiJqnJfm4b1992uTekf4H2KqW6KYFQmFC1ylq9piEkEQYQHAjG2xEJyxKkPgkWCYJVrI-m2yR1yU&amp;file_name=/4.jpg" alt="">
-                    </div>
+            <div class="page-four page-box">
+                <div class="des-box">
+                    <h3>Dual Power Source</h3>
+                    <p>
+                        This fan comes with a built-in 1200mAh 18650 Li-ion battery, working up to 8 hours after a full charge.
+                        It can also be used via USB port from your computer, power bank, USB charger or other devices with USB output.
+                    </p>
                 </div>
-            </section>
+                <div class="img-box">
+                    <img src="//minthouz.oss-cn-shenzhen.aliyuncs.com/images/product/English/Fan1/PC/4.jpg" alt="">
+                </div>
+            </div>
             <!-- five -->
-            <section>
-                <div class="detail_box_five relative">
-                    <div class="detail_box_text text_center absolute">
-                        <strong style="opacity: 1; margin-top: 0px;">MU-MIMO – more client devices, no more worries!</strong>
-                        <p style="opacity: 1; margin-top: 0px;">
-                            Complying with 802.11ac Wave 2 standard, one noticeable feature of MU-MIMO is it allows an access point to transmit data to multiple client devices simultaneously. Simply put, even many people connect to the same router,  it is still probable that they enjoy the same speed of Internet.
-                        </p>
-                    </div>
-                    <div class="detail_box_img">
-                        <img class="" src="https://cloud.wavlink.com/index.php?user/publicLink&amp;fid=573cifasLs52wwPo8z6Jo-T8UGQozYQMTmAMJWt_H5LK1c8eEsKFDB0vdUqdh124j90UooMj6vWKABr3XjncykIh161tgbbYM1eZIpxdnswArAxnRIQDIC8lOQvmtzx_yauu118vOVOkL_5tFjkU8cm2Z3-KkVIZbos&amp;file_name=/5.jpg" alt="">
-                    </div>
+            <div class="page-five page-box">
+                <div class="des-box">
+                    <h3>Choose Your Desire Direction of Wind</h3>
+                    <p>
+                        The head of this  fan can rotates up to 180 degrees and the handle is extendable.
+                        Therefore, so you can direct the cool air to where you need it most.
+                    </p>
                 </div>
-            </section>
+                <div class="img-box">
+                    <img src="//minthouz.oss-cn-shenzhen.aliyuncs.com/images/product/English/Fan1/PC/5.jpg" alt="">
+                </div>
+            </div>
             <!-- six -->
-            <section>
-                <div class="detail_box_six relative">
-                    <div class="detail_box_text text_center absolute">
-                        <strong style="opacity: 1; margin-top: 0px;">Full Gigabit Ports Ultra-Fast Wired Connection</strong>
-                        <p style="opacity: 1; margin-top: 0px;">
-                            Five Gigabit Ethernet ports, 10X faster than conventional Fast Ethernet, can be aggregated to double the connection speed to wired computers, wired printers and other network devices at ultra-fast wired speeds.
-                        </p>
-                    </div>
-                    <div class="detail_box_img">
-                        <img class="" src="https://cloud.wavlink.com/index.php?user/publicLink&amp;fid=9cf8w5Xtj3rKoLZwpu3Hwab_4hcPsIM-OxWRDz1xPI9Q4LvMXWkdRAxEO3mGfhVGqRFLSJuLiqo_er1Z27UQ4eNG_8Kjysbd0xfC86Z7qcDJPX6QJlLKMq7qDQvO-lx_ZuAjNYaoQa_8rafrEcyS7Lq8-xCStbvBs9Y&amp;file_name=/6.jpg" alt="">
-                    </div>
+            <div class="page-six page-box">
+                <div class="des-box">
+                    <h3>Enjoy A Whispering Breeze</h3>
+                    <p>
+                        The fan moves loads of air yet it is very quiet.
+                        Its brushless motor keeps you cool and comfortable while you are concentrating or sleeping.
+                    </p>
                 </div>
-            </section>
+                <div class="img-box">
+                    <img src="//minthouz.oss-cn-shenzhen.aliyuncs.com/images/product/English/Fan1/PC/6.jpg" alt="">
+                </div>
+            </div>
             <!-- seven -->
-            <section>
-                <div class="detail_box_seven relative">
-                    <div class="detail_box_text text_center absolute">
-                        <strong style="opacity: 1; margin-top: 0px;">USB 3.0 Port</strong>
-                        <p style="opacity: 1; margin-top: 0px;">
-                            On this router there is a USB3.0 port, approximately 10 times faster than USB2.0, for faster data transmission, media storage and media sharing across your network.
-                        </p>
-                    </div>
-                    <div class="detail_box_img">
-                        <img class="" src="https://cloud.wavlink.com/index.php?user/publicLink&amp;fid=c495eudwi9LkI0_yXQAP_ndSs1ROM9AVjBg8PZBdFexFHfGwiIafiTJ0x5b0c0V0oA38uHGq5JY_Umo0Jdmc7-izmrZ8VDCQSI0KNHUbPlbl2V16kG5VaKzc-5JVQ5H4yivvVJoXXrUDlhoaOx_bnQIztSONyDQkHeg&amp;file_name=/7.jpg" alt="">
-                    </div>
+            <div class="page-seven page-box">
+                <div class="des-box">
+                    <h3>Removable Grill Cool and Clean</h3>
+                    <p>
+                        Fans would accumulate dirt and dust overtime. While the grill of our fan can be removed easily by turning it anticlockwise. Place the grill in a sink and turn on the faucet. Dust the blades with a brush or sponge.
+                    </p>
                 </div>
-            </section>
+                <div class="img-box">
+                    <img src="//minthouz.oss-cn-shenzhen.aliyuncs.com/images/product/English/Fan1/PC/7.jpg" alt="">
+                </div>
+            </div>
             <!-- eight -->
-            <section>
-                <div class="detail_box_eight relative">
-                    <div class="detail_box_text absolute">
-                        <strong style="opacity: 1; margin-top: 0px;">Friendly User Interface</strong>
-                        <p style="opacity: 1; margin-top: 0px;">
-                            To control your network by enabling parental control, blocking unwanted devices, monitoring Internet activity and creating Wi-Fi guest networks is easier than ever on our user interface.
-                        </p>
-                    </div>
-                    <div class="detail_box_img">
-                        <img class="" src="https://cloud.wavlink.com/index.php?user/publicLink&amp;fid=9bd8OM1G7Bc-6gd6278G7MHtBG4ijgLAbByKpkT0iFgL2THalUZtiwCijzZmLqMXGhfSf_RVMphObI8wM6Vx8wim0mUruSKIHBMPq3Y5orp2W5YXhFiHzxVOYHGbfcHya-0wkOZd0pn4EnNd9c2nE3sGqPga9J5MEvY&amp;file_name=/8.jpg" alt="">
-                    </div>
+            <!--<div class="page-eight page-box">
+                <div class="des-box">
+                    <h3></h3>
+                    <p>
+
+                    </p>
                 </div>
-            </section>
-            <!-- nine -->
-            <section>
-                <div class="detail_box_nine relative">
-                    <div class="detail_box_text absolute">
-                        <strong style="opacity: 1; margin-top: 0px;">TURBO technology</strong>
-                        <p style="opacity: 1; margin-top: 0px;">
-                            Push TURBO button, your network will be optimized immediately. Accordingly, endless buffering and reboots are not supposed to bother you again.
-                        </p>
-                    </div>
-                    <div class="detail_box_img">
-                        <img class="" src="https://cloud.wavlink.com/index.php?user/publicLink&amp;fid=e0b0CxfE4qGRc1artrIBcltprMJnxBu9NtbuvbX7Qe3XNooHYy6UxHQlVt4ud4k27WjiTYPpZO8_3Kaohv9n-BWod14rigHTbhDyRaofZh44uFkMZpRWF5L-NV3LWRw27KcpwtJc2a4kOW8qFemfBHKsu8JtUdtVjV8&amp;file_name=/9.jpg" alt="">
-                    </div>
+                <div class="img-box">
+                    <img src="//minthouz.oss-cn-shenzhen.aliyuncs.com/images/product/English/Fan1/PC/8.jpg" alt="">
                 </div>
-            </section>
+            </div>
+            &lt;!&ndash; nine &ndash;&gt;
+            <div class="page-nine page-box">
+                <div class="des-box">
+                    <h3></h3>
+                    <p>
+
+                    </p>
+                </div>
+                <div class="img-box">
+                    <img src="//minthouz.oss-cn-shenzhen.aliyuncs.com/images/product/English/Fan1/PC/9.jpg" alt="">
+                </div>
+            </div>-->
         </div>
     </div>
 
@@ -472,31 +454,27 @@
 
     function productNav() {
         var document_sT = $(document).scrollTop(),
-            nav = $('.g-hd .nav').height(),
-            gallery = $('.product-gallery').height();
-        var top = nav + gallery;
-        if (document_sT > top) {
+            nav = $('.g-hd .nav').height();
+        if (document_sT > nav) {
             $('.product-nav').addClass('nav-active');
-            $('.product-Overview').add('.product-Specifications').css('paddingTop', '60px');
+            $('.product-Detail').css('paddingTop', '60px')
         }
         $(window).bind("scroll", function () {
             var document_sT = $(document).scrollTop();
-            if (document_sT > top) {
+            if (document_sT > nav) {
                 $('.product-nav').addClass('nav-active');
-                $('.product-Overview').add('.product-Specifications').css('paddingTop', '60px');
+                $('.product-Detail').css('paddingTop', '60px')
             } else {
                 $('.product-nav').removeClass('nav-active');
-                $('.product-Overview').add('.product-Specifications').css('paddingTop', '0');
+                $('.product-Detail').css('paddingTop', '0')
             }
         });
     }
 
     function navTableChange () {
         var subNav = $('.sub_nav span'),
-            overviewDom = $('.product-Overview'),
+            overviewDom = $('.product-Detail'),
             SpecificationsDom = $('.product-Specifications');
-        /* var overviewTop = overviewDom.offset().top,
-             Specifications = SpecificationsDom.offset().top;*/
         subNav.click(function () {
             var a = $(this).index();
             if (a === 0) {
