产品详情 + 列表

--- a/app/frontend/view/desktop/common/nav.html
+++ b/app/frontend/view/desktop/common/nav.html
@@ -53,38 +53,38 @@
                             <ul class="common-width">
                                 <li class="children-list">
                                     <a href="/{$code}/product/hello/detail.html">
-                                        <img src="https://i01.appmifile.com/webfile/globalimg/us/800/miBoxS.jpg?width=140&height=140" alt="">
-                                        <p>Mi Box S</p>
+                                        <img src="//minthouz.oss-cn-shenzhen.aliyuncs.com/images/product/English/Fan1/Fan1.png" alt="">
+                                        <p>Fan1</p>
                                     </a>
                                 </li>
                                 <li class="children-list">
                                     <a href="/{$code}/product/hello/detail.html">
-                                        <img src="https://i01.appmifile.com/webfile/globalimg/us/800/Projector.jpg?width=140&height=140" alt="">
-                                        <p>Mi Laser Projector 150''</p>
+                                        <img src="//minthouz.oss-cn-shenzhen.aliyuncs.com/images/product/English/Fan1/Fan1.png" alt="">
+                                        <p>Rechargeable Battery Operated Fan With 3 Speeds</p>
                                     </a>
                                 </li>
                                 <li class="children-list">
                                     <a href="/{$code}/product/hello/detail.html">
-                                        <img src="https://i01.appmifile.com/webfile/globalimg/us/Product/smartcompactprojector/compactprojector140.jpg?width=140&height=140" alt="">
-                                        <p>Mi Smart Compact Projector</p>
+                                        <img src="//minthouz.oss-cn-shenzhen.aliyuncs.com/images/product/English/Fan1/Fan1.png" alt="">
+                                        <p>Rechargeable Battery Operated Fan With 3 Speeds</p>
                                     </a>
                                 </li>
                                 <li class="children-list">
                                     <a href="/{$code}/product/hello/detail.html">
-                                        <img src="https://i01.appmifile.com/webfile/globalimg/us/800/secutrity-camera-140140.jpg?width=140&height=140" alt="">
-                                        <p>Mi Home Security Camera</p>
+                                        <img src="//minthouz.oss-cn-shenzhen.aliyuncs.com/images/product/English/Fan1/Fan1.png" alt="">
+                                        <p>Rechargeable Battery Operated Fan With 3 Speeds Rechargeable Battery Operated Fan With 3 Speeds</p>
                                     </a>
                                 </li>
                                 <li class="children-list">
                                     <a href="/{$code}/product/hello/detail.html">
-                                        <img src="https://i01.appmifile.com/webfile/globalimg/us/Product/360camera/140pic.jpg?width=140&height=140" alt="">
-                                        <p>Mi Home Security Camera 360° 1080P</p>
+                                        <img src="//minthouz.oss-cn-shenzhen.aliyuncs.com/images/product/English/Fan1/Fan1.png" alt="">
+                                        <p>Rechargeable Battery Operated Fan With 3 Speeds</p>
                                     </a>
                                 </li>
                                 <li class="children-list">
                                     <a href="/{$code}/product/hello/detail.html">
-                                        <img src="https://i01.appmifile.com/webfile/globalimg/us/800/DeskLamp.png?width=140&height=140" alt="">
-                                        <p>Mi LED Desk Lamp</p>
+                                        <img src="//minthouz.oss-cn-shenzhen.aliyuncs.com/images/product/English/Fan1/Fan1.png" alt="">
+                                        <p>Rechargeable Battery Operated Fan With 3 Speeds</p>
                                     </a>
                                 </li>
                             </ul>
