--- a/app/frontend/view/desktop/product/detail.html
+++ b/app/frontend/view/desktop/product/detail.html
@@ -7,33 +7,43 @@
 {block name="style"}
 <link rel="stylesheet" href="{{frontend}}/desktop/css/page/Product-detail.css">
 <style>
-    .page-one .des-box { width: 30%; top: 10%; left: 10% }
-    .page-two .des-box { width: 50%; top: 10%; left: 25%; text-align: center; }
-    .page-three .des-box { width: 50%; top: 8%; left: 25%; text-align: center; }
-    .page-four .des-box { width: 50%; top: 8%; left: 25%; text-align: center; }
-    .page-five .des-box { width: 50%; top: 10%; left: 25%; text-align: center; }
-    .page-six .des-box { width: 30%; top: 15%; left: 6% }
-    .page-seven .des-box { width: 30%; top: 15%; right: 4.7% }
-    .page-eight .des-box { width: 50%; top: 8%; left: 6% }
-    .page-nine .des-box { width: 50%; top: 8%; left: 6% }
+    .page-one .des-box { width: 50%; top: 5%; left: 25%; text-align: center; }
+    .page-two .des-box { width: 30%; top: 10%; left: 10%; }
+    .page-three .des-box { width: 50%; top: 10%; left: 25%; text-align: center; }
+    .page-four .des-box { width: 50%; top: 5%; left: 25%; text-align: center; }
+    .page-five .des-box { width: 50%; top: 5%; left: 25%; text-align: center; }
+    .page-six .des-box { width: 50%; top: 10%; left: 25%; text-align: center; }
+    .page-seven .des-box { width: 30%; top: 15%; left: 7%; }
+    .page-eight .des-box { width: 30%; top: 15%; left: 65.3%; }
+    .page-nine .des-box {  }
+    .page-ten .des-box {  }
+    .page-eleven .des-box {  }
 
     @media screen and (min-width: 768px) and (max-width: 991px) {
-        .page-one .des-box { width: 45%; top: 10%; left: 5% }
-        .page-two .des-box { width: 80%; top: 5%; left: 10%; text-align: center; }
-        .page-three .des-box { width: 80%; top: 3%; left: 10%; text-align: center; }
+        .page-one .des-box { width: 45%; top: 10%; left: 5%; }
+        .page-two .des-box { width: 45%; top: 10%; left: 5%; }
+        .page-three .des-box { width: 80%; top: 5%; left: 10%; text-align: center; }
         .page-four .des-box { width: 80%; top: 3%; left: 10%; text-align: center; }
-        .page-five .des-box { width: 80%; top: 8%; left: 10%; text-align: center; }
-        .page-six .des-box { width: 45%; top: 15%; left: 6% }
-        .page-seven .des-box { width: 39%; top: 5%; right: 10px; }
+        .page-five .des-box { width: 80%; top: 3%; left: 10%; text-align: center; }
+        .page-six .des-box { width: 80%; top: 8%; left: 10%; text-align: center; }
+        .page-seven .des-box { width: 45%; top: 15%; left: 6%; }
+        .page-eight .des-box { width: 30%; top: 15%; left: 65.3%; }
+        .page-nine .des-box {  }
+        .page-ten .des-box {  }
+        .page-eleven .des-box {  }
     }
     @media screen and (min-width: 991px) and (max-width: 1199px) {
-        .page-one .des-box { width: 45%; top: 10%; left: 8% }
-        .page-two .des-box { width: 80%; top: 5%; left: 10%; text-align: center; }
-        .page-three .des-box { width: 80%; top: 3%; left: 10%; text-align: center; }
+        .page-one .des-box { width: 45%; top: 10%; left: 8%; }
+        .page-two .des-box { width: 45%; top: 10%; left: 8%; }
+        .page-three .des-box { width: 80%; top: 5%; left: 10%; text-align: center; }
         .page-four .des-box { width: 80%; top: 3%; left: 10%; text-align: center; }
-        .page-five .des-box { width: 80%; top: 8%; left: 10%; text-align: center; }
-        .page-six .des-box { width: 45%; top: 15%; left: 6% }
-        .page-seven .des-box { width: 39%; top: 5%; right: 10px; }
+        .page-five .des-box { width: 80%; top: 3%; left: 10%; text-align: center; }
+        .page-six .des-box { width: 80%; top: 8%; left: 10%; text-align: center; }
+        .page-seven .des-box { width: 45%; top: 15%; left: 6%; }
+        .page-eight .des-box { width: 30%; top: 15%; left: 65.3%; }
+        .page-nine .des-box {  }
+        .page-ten .des-box {  }
+        .page-eleven .des-box {  }
     }
 </style>
 {/block}
@@ -69,11 +79,8 @@
             <!-- two -->
             <div class="page-two page-box">
                 <div class="des-box">
-                    <h3>3 Speeds Cool You Down Fast</h3>
-                    <p>
-                        The ingenious fan features three speeds: low, medium, and high, fit-ting anyone's cooling needs.
-                        Just press the button to switch the fan on and adjust wind modes.
-                    </p>
+                    <h3></h3>
+                    <p></p>
                 </div>
                 <div class="img-box">
                     <img src="//minthouz.oss-cn-shenzhen.aliyuncs.com/images/product/English/Fan1/PC/2.jpg" alt="">
@@ -82,10 +89,10 @@
             <!-- three -->
             <div class="page-three page-box">
                 <div class="des-box">
-                    <h3>A Portable But Furthermore, A Desktop Fan</h3>
+                    <h3>3 Speeds Cool You Down Fast</h3>
                     <p>
-                        It can be a handheld fan or as a desktop air fan according to your individual needs.
-                        With a plus stand you can use it as a desktop fan as well.
+                        The ingenious fan features three speeds: low, medium, and high, fit-ting anyone's cooling needs.
+                        Just press the button to switch the fan on and adjust wind modes.
                     </p>
                 </div>
                 <div class="img-box">
@@ -95,10 +102,10 @@
             <!-- four -->
             <div class="page-four page-box">
                 <div class="des-box">
-                    <h3>Dual Power Source</h3>
+                    <h3>A Portable But Furthermore, A Desktop Fan</h3>
                     <p>
-                        This fan comes with a built-in 1200mAh 18650 Li-ion battery, working up to 8 hours after a full charge.
-                        It can also be used via USB port from your computer, power bank, USB charger or other devices with USB output.
+                        It can be a handheld fan or as a desktop air fan according to your individual needs.
+                        With a plus stand you can use it as a desktop fan as well.
                     </p>
                 </div>
                 <div class="img-box">
@@ -108,10 +115,10 @@
             <!-- five -->
             <div class="page-five page-box">
                 <div class="des-box">
-                    <h3>Choose Your Desire Direction of Wind</h3>
+                    <h3>Dual Power Source</h3>
                     <p>
-                        The head of this  fan can rotates up to 180 degrees and the handle is extendable.
-                        Therefore, so you can direct the cool air to where you need it most.
+                        This fan comes with a built-in 1200mAh 18650 Li-ion battery, working up to 8 hours after a full charge.
+                        It can also be used via USB port from your computer, power bank, USB charger or other devices with USB output.
                     </p>
                 </div>
                 <div class="img-box">
@@ -121,10 +128,10 @@
             <!-- six -->
             <div class="page-six page-box">
                 <div class="des-box">
-                    <h3>Enjoy A Whispering Breeze</h3>
+                    <h3>Choose Your Desire Direction of Wind</h3>
                     <p>
-                        The fan moves loads of air yet it is very quiet.
-                        Its brushless motor keeps you cool and comfortable while you are concentrating or sleeping.
+                        The head of this  fan can rotates up to 180 degrees and the handle is extendable.
+                        Therefore, so you can direct the cool air to where you need it most.
                     </p>
                 </div>
                 <div class="img-box">
@@ -134,9 +141,10 @@
             <!-- seven -->
             <div class="page-seven page-box">
                 <div class="des-box">
-                    <h3>Removable Grill Cool and Clean</h3>
+                    <h3>Enjoy A Whispering Breeze</h3>
                     <p>
-                        Fans would accumulate dirt and dust overtime. While the grill of our fan can be removed easily by turning it anticlockwise. Place the grill in a sink and turn on the faucet. Dust the blades with a brush or sponge.
+                        The fan moves loads of air yet it is very quiet.
+                        Its brushless motor keeps you cool and comfortable while you are concentrating or sleeping.
                     </p>
                 </div>
                 <div class="img-box">
@@ -144,29 +152,47 @@
                 </div>
             </div>
             <!-- eight -->
-            <!--<div class="page-eight page-box">
+            <div class="page-eight page-box">
                 <div class="des-box">
-                    <h3></h3>
+                    <h3>Removable Grill Cool and Clean</h3>
                     <p>
-
+                        Fans would accumulate dirt and dust overtime. While the grill of our fan can be removed easily by turning it anticlockwise. Place the grill in a sink and turn on the faucet. Dust the blades with a brush or sponge.
                     </p>
                 </div>
                 <div class="img-box">
                     <img src="//minthouz.oss-cn-shenzhen.aliyuncs.com/images/product/English/Fan1/PC/8.jpg" alt="">
                 </div>
             </div>
-            &lt;!&ndash; nine &ndash;&gt;
+            <!-- nine -->
             <div class="page-nine page-box">
                 <div class="des-box">
                     <h3></h3>
-                    <p>
-
-                    </p>
+                    <p></p>
                 </div>
                 <div class="img-box">
                     <img src="//minthouz.oss-cn-shenzhen.aliyuncs.com/images/product/English/Fan1/PC/9.jpg" alt="">
                 </div>
-            </div>-->
+            </div>
+            <!-- ten -->
+            <div class="page-ten page-box">
+                <div class="des-box">
+                    <h3></h3>
+                    <p></p>
+                </div>
+                <div class="img-box">
+                    <img src="//minthouz.oss-cn-shenzhen.aliyuncs.com/images/product/English/Fan1/PC/10.jpg" alt="">
+                </div>
+            </div>
+            <!-- eleven -->
+            <div class="page-eleven page-box">
+                <div class="des-box">
+                    <h3></h3>
+                    <p></p>
+                </div>
+                <div class="img-box">
+                    <img src="//minthouz.oss-cn-shenzhen.aliyuncs.com/images/product/English/Fan1/PC/11.jpg" alt="">
+                </div>
+            </div>
         </div>
     </div>
 
@@ -300,7 +326,6 @@
         var document_sT = $(document).scrollTop(),
             hd = $('.g-hd .hd').height(),
             nav = $('.g-hd .nav').height();
-        console.log(hd);
         var gHd = hd + nav;
         if (document_sT > gHd) {
             $('.product-nav').addClass('nav-active');
