--- a/public/static/frontend/desktop/css/page/Product-detail.less
+++ b/public/static/frontend/desktop/css/page/Product-detail.less
@@ -9,7 +9,8 @@
 
 .g-hd .nav {
     background: @whiteColor;
-    position: static;
+    position: relative;
+    top: 0;
 }
 
 .product-container {
