--- a/public/static/frontend/desktop/css/page/Product-list.css
+++ b/public/static/frontend/desktop/css/page/Product-list.css
@@ -78,16 +78,20 @@ section {
   margin-right: auto;
 }
 .product-list .list-box .list-item a p {
-  text-overflow: ellipsis;
-  white-space: nowrap;
+  width: 100%;
+  display: -webkit-box;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;
   overflow: hidden;
-  padding: 30px 0;
-  color: #333;
-  line-height: 20px;
+  position: relative;
+  line-height: 22px;
+  height: 66px;
   -webkit-transition: all 0.2s linear;
   -moz-transition: all 0.2s linear;
   -ms-transform: all 0.2s linear;
   -o-transition: all 0.2s linear;
   transition: all 0.2s linear;
+  margin: 20px 0;
+  color: #333;
 }
-/*# sourceMappingURL=product-list.css.map */
+/*# sourceMappingURL=Product-list.css.map */
