--- a/public/static/frontend/desktop/css/page/Product-list.less
+++ b/public/static/frontend/desktop/css/page/Product-list.less
@@ -73,11 +73,10 @@ section {
             .center-block();
         }
         .list-item a p {
-            .text-overflow();
-            padding: 30px 0;
-            color: @baseColor;
-            line-height: 20px;
+            .text-overflow-many(100%, 3);
             #transition(all .2s linear);
+            margin: 20px 0;
+            color: @baseColor;
         }
     }
 }
