--- a/public/static/frontend/mobile/css/page/About.css
+++ b/public/static/frontend/mobile/css/page/About.css
@@ -8,7 +8,9 @@ section {
   min-height: 800px;
 }
 section .About-menu {
-  padding: 22px 10px 14px;
+  padding: 10px;
+  background: #fff;
+  border-bottom: 1px solid #eaeaea;
 }
 section .About-menubefore,
 section .About-menu:after {
@@ -19,14 +21,35 @@ section .About-menu:after {
 section .About-menu:after {
   clear: both;
 }
+section .About-menu ulbefore,
+section .About-menu ul:after {
+  content: " ";
+  display: table;
+  zoom: 1;
+}
+section .About-menu ul:after {
+  clear: both;
+}
 section .About-menu .menu-item {
   float: left;
-  padding: 0 15px;
-  border-left: 1px solid #eaeaea;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+  width: 50%;
+  line-height: 30px;
+  border-top: 1px solid #eaeaea;
 }
-section .About-menu .menu-item:nth-of-type(1) {
-  padding-left: 0;
-  border-left: none;
+section .About-menu .menu-item:nth-of-type(1),
+section .About-menu .menu-item:nth-of-type(2) {
+  border-top: transparent;
+}
+section .About-menu .menu-item:nth-of-type(2n + 1) {
+  padding-right: 5px;
+  border-right: 1px solid #eaeaea;
+}
+section .About-menu .menu-item:nth-of-type(2n + 2) {
+  padding-left: 5px;
+  border-left: 1px solid transparent;
 }
 section .About-menu .menu-item a {
   color: #333;
