--- a/public/static/frontend/mobile/css/page/About.less
+++ b/public/static/frontend/mobile/css/page/About.less
@@ -11,14 +11,29 @@ section {
 
   .About-menu {
     .clearFix();
-    padding: 22px 10px 14px;
+    padding: 10px;
+    background: @whiteColor;
+    border-bottom: 1px solid @borderColor;
+    ul {
+      .clearFix();
+    }
     .menu-item {
       .fl();
-      padding: 0 15px;
-      border-left: 1px solid @borderColor;
-      &:nth-of-type(1) {
-        padding-left: 0;
-        border-left: none;
+      .text-overflow();
+      width: 50%;
+      line-height: 30px;
+      border-top: 1px solid @borderColor;
+      &:nth-of-type(1),
+      &:nth-of-type(2) {
+        border-top: transparent;
+      }
+      &:nth-of-type(2n + 1) {
+        padding-right: 5px;
+        border-right: 1px solid @borderColor;
+      }
+      &:nth-of-type(2n + 2) {
+        padding-left: 5px;
+        border-left: 1px solid transparent;
       }
     }
     .menu-item a {
